new works added

--- a/index.html
+++ b/index.html
@@ -433,6 +433,11 @@
                                         data-bs-target="#pills-template" type="button" role="tab"
                                         aria-controls="pills-template" aria-selected="false">Template Design</button>
                                 </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="pills-socialMedia-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-socialMedia" type="button" role="tab"
+                                        aria-controls="pills-socialMedia" aria-selected="false">Social Media</button>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -729,6 +734,139 @@
                             </div>
                         </div>
                         <!-- ====== Template Design end ======= -->
+                        <!-- ====== Social Media Start ======= -->
+                        <div class="tab-pane fade" id="pills-socialMedia" role="tabpanel"
+                            aria-labelledby="pills-socialMedia-tab" tabindex="0">
+                            <div class="row">
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/3.2.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/3.2.jpg" alt="The Chung Wah">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/3.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/3.jpg" alt="Aman's House Style">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/5.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/5.jpg" alt="Daisy Family Saloon">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/2.2.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/2.2.jpg" alt="Jewellery Post">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/7.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/7.jpg" alt="Cosmetic Products">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/1.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/1.jpg" alt="Bankra Central Nursing Home">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/1.2.1.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/1.2.1.jpg" alt="Zaareen">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/2.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/2.jpg" alt="Aman's House Style">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/social-media/2.5.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg3" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/social-media/2.5.jpg" alt="The Chung Wah">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                            </div>
+                        </div>
+                        <!-- ====== Social Media end ======= -->
                     </div>
 
                 </div>
