--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Samir Majumdar</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
-                            <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to create
-                                template design, graphic design and website design. I am learning React JS & other
-                                backend parts I wish to be a fullstack developer.</p>
+                            <p>
+                                Welcome to my portfolio! I'm Samir Majumdar, a seasoned web and graphic designer with over three years of professional experience. My passion lies in crafting visually stunning and user-friendly designs that bring clients' visions to life. With a solid foundation in both web and graphic design, I excel at transforming ideas into engaging digital experiences.
+                                <br><br>
+                                Currently, I'm expanding my expertise by learning React.js, aiming to transition into a frontend developer role. I thrive in collaborative environments, always committed to delivering high-quality results that exceed expectations. Explore my work, and let's connect to discuss how I can contribute to your team's success.
+                            </p>
                             
                             <div class="social_icons">
                                 <a href="https://www.facebook.com/profile.php?id=100084317672358" class="icons" target="_blank">
@@ -107,9 +109,9 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I am <span>Web & Graphic Designer</span></h3>
-                                    <p>I'm a web designer with extensive experience for over 3 years. I'm expertised to
-                                        create template design, graphic design and website design. I am learning React
-                                        JS & other backend parts I wish to be a fullstack developer.</p>
+                                    <p>
+                                        Hello, I'm Samir Majumdar, a skilled web and graphic designer with over three years of professional experience. Passionate about creating visually stunning and user-friendly designs, I bring creativity, technical expertise, and a keen eye for detail to every project I undertake. With a solid foundation in both web and graphic design, I excel in translating clients' visions into compelling digital experiences. Currently, I am expanding my skill set by learning React.js and aspiring to transition into a role as a frontend developer. From concept development to final implementation, I thrive in collaborative environments and am committed to delivering high-quality results that exceed expectations. Let's connect and discuss how I can contribute to your team's success.
+                                    </p>
                                 </div>
                             </div>
                             <div class="row">
@@ -152,7 +154,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="pdf/Samir-Majumdar-CV(29.02.24)_compressed.pdf" target="_blank"
+                                            <a href="pdf/samir_majumdar_web-designer_with_photo(23.04.24).pdf" target="_blank"
                                                 class="btn1">Download CV</a>
                                             <a href="#contact" class="btn1 hire-me">Hire Me</a>
                                         </div>
@@ -451,7 +453,65 @@
                                     <div class="portfolio-item-inner shadow-dark">
                                         <div class="portfolio-item-overlay">
                                             <div class="portfolio-img">
-                                                <img src="images/cognian.webp" alt="Cognian Home Solutions Pvt. Ltd."
+                                                <img src="images/web/crypton-layout2.jpg" alt="Crypton Landing Page"
+                                                    title="Crypton Landing Page">
+                                            </div>
+                                            <a class="port_iconbox" href="https://samir-1993.github.io/lp-crypton.github.io/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
+                                                <img src="images/web/wfit-layout.jpg" alt="W FIT GYM" title="W FIT GYM">
+                                            </div>
+                                            <a class="port_iconbox" href="https://wfitgym.web.babusiya.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
+                                                <img src="images/web/jadoo_tour-travels2.jpg" alt="Jadoo Tour Travels"
+                                                    title="Jadoo Tour Travels">
+                                            </div>
+                                            <a class="port_iconbox" href="https://samir-1993.github.io/jadoo_tour-travels.github.io/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
+                                                <img src="images/web/tvr-layout2.jpg" alt="TVR Health Care" title="TVR Health Care">
+                                            </div>
+                                            <a class="port_iconbox" href="https://tvrhealthcare.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
+                                                <img src="images/web/cognian-layout2.jpg" alt="Cognian Home Solutions Pvt. Ltd."
                                                     title="Cognian Home Solutions Pvt. Ltd.">
                                             </div>
                                             <a class="port_iconbox" href="https://cognianhomes.com/" target="_blank">
@@ -466,10 +526,10 @@
                                     <div class="portfolio-item-inner shadow-dark">
                                         <div class="portfolio-item-overlay">
                                             <div class="portfolio-img">
-                                                <img src="images/agora-banquets.webp" alt="Agora Banquet"
-                                                    title="Agora Banquet">
+                                                <img src="images/web/amans-layout2.jpg" alt="Agora Banquet"
+                                                    title="Aman's House Style">
                                             </div>
-                                            <a class="port_iconbox" href="https://agorabanquet.com/" target="_blank">
+                                            <a class="port_iconbox" href="https://amanshousestyle.web.babusiya.com/" target="_blank">
                                                 <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
@@ -481,7 +541,7 @@
                                     <div class="portfolio-item-inner shadow-dark">
                                         <div class="portfolio-item-overlay">
                                             <div class="portfolio-img">
-                                                <img src="images/ergo-woodline.webp" alt="ERGO WOODLINES PVT.LTD"
+                                                <img src="images/web/ergo-layout.jpg" alt="ERGO WOODLINES PVT.LTD"
                                                     title="ERGO WOODLINES PVT.LTD">
                                             </div>
                                             <a class="port_iconbox" href="https://ergowoodlines.com/" target="_blank">
@@ -496,10 +556,10 @@
                                     <div class="portfolio-item-inner shadow-dark">
                                         <div class="portfolio-item-overlay">
                                             <div class="portfolio-img">
-                                                <img src="images/arena-animation.webp" alt="ARENA ANIMATION"
-                                                    title="ARENA ANIMATION">
+                                                <img src="images/web/banaras-layout2.jpg" alt="Banaras Production"
+                                                    title="Banaras Production">
                                             </div>
-                                            <a class="port_iconbox" href="https://arenasaltlk.com/" target="_blank">
+                                            <a class="port_iconbox" href="https://photography.web.babusiya.com/" target="_blank">
                                                 <i class="fa fa-link" aria-hidden="true"></i>
                                             </a>
                                         </div>
@@ -508,6 +568,36 @@
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
                                 <div class="portfolio-item padd-15">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
+                                                <img src="images/web/case-dei-bambini-layout2.jpg" alt="Casa Dei Bambini"
+                                                    title="Casa Dei Bambini">
+                                            </div>
+                                            <a class="port_iconbox" href="https://casadeibambini.web.babusiya.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <!-- <div class="portfolio-item padd-15">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                        <div class="portfolio-item-overlay">
+                                            <div class="portfolio-img">
+                                                <img src="images/arena-animation.webp" alt="ARENA ANIMATION"
+                                                    title="ARENA ANIMATION">
+                                            </div>
+                                            <a class="port_iconbox" href="https://arenasaltlk.com/" target="_blank">
+                                                <i class="fa fa-link" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <!-- <div class="portfolio-item padd-15">
                                     <div class="portfolio-item-inner shadow-dark">
                                         <div class="portfolio-item-overlay">
                                             <div class="portfolio-img">
@@ -520,22 +610,9 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- ====== Portfolio item end ======= -->
-                                <!-- ====== Portfolio item start ======= -->
-                                <div class="portfolio-item padd-15">
-                                    <div class="portfolio-item-inner shadow-dark">
-                                        <div class="portfolio-item-overlay">
-                                            <div class="portfolio-img">
-                                                <img src="images/w-fit-gym.webp" alt="W FIT GYM" title="W FIT GYM">
-                                            </div>
-                                            <a class="port_iconbox" href="https://wfitgym.in/" target="_blank">
-                                                <i class="fa fa-link" aria-hidden="true"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- ====== Portfolio item end ======= -->
+                                
                             </div>
                         </div>
                         <!-- ====== Web Design end ======= -->
