new templates update

--- a/index.html
+++ b/index.html
@@ -722,25 +722,10 @@
                                     <div class="gallery-box shadow-dark">
                                         <div class="gallery-imgbox">
                                             <div class="gallery-iconbox">
-                                                <a href="images/creative-platform.webp"
+                                                <a href="images/templates/mkajol-layout.jpg"
                                                     class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
                                             </div>
-                                            <img src="images/creative-platform.webp" alt="Creative Platform"
-                                                title="Creative Platform">
-                                            <div class="gallery-hover-bg"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- ====== Portfolio item end ======= -->
-                                <!-- ====== Portfolio item start ======= -->
-                                <div class="portfolio-item padd-15">
-                                    <div class="gallery-box shadow-dark">
-                                        <div class="gallery-imgbox">
-                                            <div class="gallery-iconbox">
-                                                <a href="images/m-kajal-dresses.webp"
-                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
-                                            </div>
-                                            <img src="images/m-kajal-dresses.webp" alt="M Kajal Dresses"
+                                            <img src="images/templates/mkajol-layout.jpg" alt="M Kajal Dresses"
                                                 title="M Kajal Dresses">
                                             <div class="gallery-hover-bg"></div>
                                         </div>
@@ -752,6 +737,127 @@
                                     <div class="gallery-box shadow-dark">
                                         <div class="gallery-imgbox">
                                             <div class="gallery-iconbox">
+                                                <a href="images/templates/greenstarline-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/greenstarline-layout.jpg" alt="Greenstarline Udyog Pvt. Ltd"
+                                                title="Greenstarline Udyog Pvt. Ltd">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/templates/creative_platform-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/creative_platform-layout.jpg" alt="Creative Platform"
+                                                title="Creative Platform">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/templates/hi_tech_polybar-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/hi_tech_polybar-layout.jpg" alt="HI-TECH POLYBAR"
+                                                title="HI-TECH POLYBAR">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/templates/ergo-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/ergo-layout.jpg" alt="ERGO WOODLINES PVT.LTD"
+                                                title="ERGO WOODLINES PVT.LTD">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/templates/medicity-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/medicity-layout.jpg" alt="MEDICITY  SPECIALITY LABORATORY PVT. LTD"
+                                                title="MEDICITY  SPECIALITY LABORATORY PVT. LTD">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/templates/propertico-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/propertico-layout.jpg" alt="Propertico"
+                                                title="Propertico">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/templates/xtech-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/xtech-layout.jpg" alt="X-TECH MEDICAL SYSTEMS PRIVATE LIMITED"
+                                                title="X-TECH MEDICAL SYSTEMS PRIVATE LIMITED">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
+                                                <a href="images/templates/wfit_gym-layout.jpg"
+                                                    class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
+                                            </div>
+                                            <img src="images/templates/wfit_gym-layout.jpg" alt="WFIT GYM"
+                                                title="WFIT GYM">
+                                            <div class="gallery-hover-bg"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ====== Portfolio item end ======= -->
+                                <!-- ====== Portfolio item start ======= -->
+                                <!-- <div class="portfolio-item padd-15">
+                                    <div class="gallery-box shadow-dark">
+                                        <div class="gallery-imgbox">
+                                            <div class="gallery-iconbox">
                                                 <a href="images/soch-trading-company.webp"
                                                     class="fa fa-search gallery-icon-1 bimg2" aria-hidden="true"></a>
                                             </div>
@@ -760,10 +866,10 @@
                                             <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
-                                <div class="portfolio-item padd-15">
+                                <!-- <div class="portfolio-item padd-15">
                                     <div class="gallery-box shadow-dark">
                                         <div class="gallery-imgbox">
                                             <div class="gallery-iconbox">
@@ -775,10 +881,10 @@
                                             <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
-                                <div class="portfolio-item padd-15">
+                                <!-- <div class="portfolio-item padd-15">
                                     <div class="gallery-box shadow-dark">
                                         <div class="gallery-imgbox">
                                             <div class="gallery-iconbox">
@@ -790,10 +896,10 @@
                                             <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- ====== Portfolio item end ======= -->
                                 <!-- ====== Portfolio item start ======= -->
-                                <div class="portfolio-item padd-15">
+                                <!-- <div class="portfolio-item padd-15">
                                     <div class="gallery-box shadow-dark">
                                         <div class="gallery-imgbox">
                                             <div class="gallery-iconbox">
@@ -806,7 +912,7 @@
                                             <div class="gallery-hover-bg"></div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- ====== Portfolio item end ======= -->
                             </div>
                         </div>
